Add support for loading framework resources from a jar file
The framework_res.jar file used for loading framework resources contains compressed XML resource files and two binary files, resources.bin and resources_light.bin. Format of these binary files is identical to format of framework resource cache files without a header. The resources.bin file contains a list of all framework resources. The resources_light.bin file contains a list of resources excluding locale-specific ones. The framework_res.jar file is built by the //tools/adt/idea/resources-aar:framework_res build target.

This CL is identical to previously reverted ag/6042941.

Test: FrameworkResourceRepositoryTest
Bug: 79754190
Change-Id: I8d7657c8d24c77c935b240022a65807dd235308a

--- a/resources-aar/BUILD
+++ b/resources-aar/BUILD
@@ -27,6 +27,7 @@ iml_module(
     test_class = "com.android.tools.idea.resources.aar.ResourcesAarTestSuite",
     # keep sorted
     test_data = [
+        ":framework_res",
         "//prebuilts/studio/layoutlib:data/res",
         "//prebuilts/studio/sdk:platforms/latest",
         "//prebuilts/tools/common/kotlin-plugin:kotlin-plugin-for-studio",
@@ -67,4 +68,28 @@ iml_module(
         "//tools/idea/.idea/libraries:protobuf[test]",
         "//tools/idea/.idea/libraries:truth[test]",
     ],
+)
+
+java_binary(
+    name = "framework-res-jar-creator",
+    main_class = "com.android.tools.idea.resources.aar.FrameworkResJarCreator",
+    runtime_deps = [":intellij.android.resources-aar_runtime"],
+)
+
+genrule(
+    name = "framework_res",
+    srcs = [
+        "//prebuilts/studio/layoutlib:data/res",
+        "//prebuilts/studio/layoutlib:data/res/version",
+    ],
+    outs = ["framework_res.jar"],
+    cmd = ("$(JAVA) -classpath $(location :framework-res-jar-creator_deploy.jar) " +
+           "com.android.tools.idea.resources.aar.FrameworkResJarCreator " +
+           "$(location //prebuilts/studio/layoutlib:data/res/version)/.. $(OUTS)"),
+    toolchains = ["//prebuilts/studio/jdk:jdk_runtime"],
+    tools = [
+        ":framework-res-jar-creator",
+        ":framework-res-jar-creator_deploy.jar",
+    ],
+    visibility = ["//visibility:public"],
 )
