--- a/android-runtime-pipeline/BUILD
+++ b/android-runtime-pipeline/BUILD
@@ -9,8 +9,14 @@ iml_module(
     # do not sort: must match IML order
     deps = [
         "//tools/base/annotations:studio.android.sdktools.android-annotations[module]",
+        "//tools/idea/platform/core-api:intellij.platform.core[module]",
         "//tools/idea/platform/util:intellij.platform.util[module]",
+        "//tools/idea/platform/platform-api:intellij.platform.ide[module]",
         "//tools/base/ddmlib:studio.android.sdktools.ddmlib[module]",
         "//tools/base/sdklib:studio.android.sdktools.sdklib[module]",
+        "//tools/adt/idea/android-adb:intellij.android.adb[module]",
+        "//tools/adt/idea/android-common:intellij.android.common[module]",
+        "//tools/adt/idea/android:intellij.android.core[module]",
+        "//tools/adt/idea/perfd-host:intellij.android.perfdHost[module]",
     ],
 )
