Remove parenthesis in BUILD file causing iml-to-build to fail.
iml-to-build is currently unable to parse tuples or expressions with
parentheses around it. As a result having those in BUILD files will
cause iml-to-build to fail.

This CL removes the parenthesis to temporarily resolve this issue. Note
that this is only a workaround to unblock iml-to-build from crashing and
does not fix the underlying issue.

Bug: 123051383
Test: iml-to-build works now.
Change-Id: I431eeebac381ff289c203f997f883e9526058dd5

--- a/resources-aar/BUILD
+++ b/resources-aar/BUILD
@@ -82,9 +82,7 @@ genrule(
         "//prebuilts/studio/layoutlib:data/res/version",
     ],
     outs = ["framework_res.jar"],
-    cmd = ("$(JAVA) -classpath $(location :framework-res-jar-creator_deploy.jar) " +
-           "com.android.tools.idea.resources.aar.FrameworkResJarCreator " +
-           "$(location //prebuilts/studio/layoutlib:data/res/version)/.. $(OUTS)"),
+    cmd = "$(JAVA) -classpath $(location :framework-res-jar-creator_deploy.jar) " + "com.android.tools.idea.resources.aar.FrameworkResJarCreator " + "$(location //prebuilts/studio/layoutlib:data/res/version)/.. $(OUTS)",
     toolchains = ["//prebuilts/studio/jdk:jdk_runtime"],
     tools = [
         ":framework-res-jar-creator",
