Update Kotlin dependencies to 1.3.20.
Bug: n/a
Test: existing
Change-Id: Ib123c3662e8e684b364cc68611ea17365305d86a

--- a/android-kotlin/BUILD
+++ b/android-kotlin/BUILD
@@ -207,6 +207,7 @@ iml_module(
         "//tools/adt/idea/android-common:intellij.android.common[module, test]",
         "//tools/idea/platform/external-system-api:intellij.platform.externalSystem[module, test]",
         "//tools/idea/platform/external-system-impl:intellij.platform.externalSystem.impl[module, test]",
+        "//tools/vendor/intellij/cidr:intellij.c[module, test]",
     ],
 )
 
