--- a/designer/BUILD
+++ b/designer/BUILD
@@ -139,5 +139,6 @@ iml_module(
         "//tools/adt/idea/android-kotlin:intellij.android.kotlin.idea[module, test]",
         "//tools/adt/idea/android-kotlin:intellij.android.kotlin.output.parser[module, test]",
         "//tools/adt/idea/layoutlib:intellij.android.layoutlib[module, test]",
+        "//tools/vendor/intellij/cidr:intellij.c[module, test]",
     ],
 )
