--- a/android-kotlin/idea-android/testData/configuration/android-gradle/emptyDependencyList_after.gradle
+++ b/android-kotlin/idea-android/testData/configuration/android-gradle/emptyDependencyList_after.gradle
@@ -19,5 +19,5 @@ android {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
