--- a/android-kotlin/idea-android/testData/configuration/android-gradle/gradleExamples/gradleExample0_after.gradle
+++ b/android-kotlin/idea-android/testData/configuration/android-gradle/gradleExamples/gradleExample0_after.gradle
@@ -35,7 +35,7 @@ project.afterEvaluate {
 
 dependencies {
     compile project(':lib')
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 buildscript {
