--- a/android-kotlin/idea-android/testData/configuration/android-gradle/gradleExamples/gradleExample5_after.gradle
+++ b/android-kotlin/idea-android/testData/configuration/android-gradle/gradleExamples/gradleExample5_after.gradle
@@ -48,5 +48,5 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
