--- a/android-kotlin/idea-android/testData/configuration/android-gradle/gradleExamples/gradleExample8_after.gradle
+++ b/android-kotlin/idea-android/testData/configuration/android-gradle/gradleExamples/gradleExample8_after.gradle
@@ -12,7 +12,7 @@ android {
 //
 dependencies {
     compile project(':lib')
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 buildscript {
