--- a/android-kotlin/idea-android/testData/configuration/android-gradle/missedRepositoriesInBuildscriptBlock_after.gradle
+++ b/android-kotlin/idea-android/testData/configuration/android-gradle/missedRepositoriesInBuildscriptBlock_after.gradle
@@ -5,7 +5,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
     repositories {
-        maven { url 'http://oss.sonatype.org/content/repositories/snapshots' }
+        maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         mavenCentral()
     }
 }
@@ -15,7 +15,7 @@ apply plugin: 'kotlin-android'
 
 repositories {
     mavenCentral()
-    maven { url 'http://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
 }
 
 android {
@@ -30,7 +30,7 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:13.0.0'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 // VERSION: $VERSION$
