Rename and move PerfdProxy to TransportProxy
Moves PerfdProxy to Transport so the proxy can be made generic
and decouple the dependency on profilers. This is also a prerequisite
for moving StudioProfilerDeviceManager to Transport.

Bug: 122481054
Test: Existing, no functionality change
Change-Id: I8eb824c62d70b32229706e92c3c5ad28e4d249c8

--- a/android-transport/BUILD
+++ b/android-transport/BUILD
@@ -18,5 +18,6 @@ iml_module(
         "//tools/adt/idea/android-common:intellij.android.common[module]",
         "//tools/adt/idea/android:intellij.android.core[module]",
         "//tools/adt/idea/perfd-host:intellij.android.perfdHost[module]",
+        "//tools/idea/.idea/libraries:studio-profiler-grpc-1.0-jarjar",
     ],
 )
